--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,11 @@
+/* 第一块导航栏 */
 .header{
   width: 100%;
   height: 62px;
   background-color: pink;
   display: table;
+  position: fixed;
+  z-index: 9;
 }
 .header .header-contain{
   padding-left: 20px;
@@ -18,7 +21,7 @@
   height: 31px;
 }
 .header .header-contain .header-l .header-l-font .uns{
-  margin-left: 7px;
+  margin-left: 12px;
   font-weight: 700;
 }
 .header .header-contain .header-l .header-l-font span:nth-child(2){
@@ -37,13 +40,93 @@
     font-size: 14px;
     border: 1px solid transparent;
 }
+.header .header-contain .header-l .search .sousuo{
+  height: 38px;
+  width: 30px;
+  display: inline-block;
+  position: relative;
+}
+.header .header-contain .header-l .search svg{
+  width: 30px;
+  height: 16px;
+  position: absolute;
+  top: 13px;
+  left: 5px;
+}
 .header .header-contain .header-l .search input{
   height: 40px;
     border-radius: 24px;
     background-color: #eee;
     font-size: 14px;
     border: 1px solid transparent;
+    background: none;
+    border: none;
+    color: #111;
+    width: 700px;
+    position: absolute;
+    left: 238px;
+    top: 10px;
+    
 }
-/* .header .span{
-  width: 100px;
-} */
+.header .header-contain .header-l .logo {
+  margin-top: 5px;
+  height: 32px;
+  width: 32px;
+  float: left;
+}
+/* 第二块导航栏 */
+.nav{
+  width: 100%;
+  height: 56px;
+  background-color: skyblue;
+  position: fixed;
+  top: 62px;
+  z-index: 9;
+}
+.nav .nav-left{
+  padding-left: 20px;
+  padding-right: 20px;
+  float: left;
+}
+.nav .nav-left .edi{
+  height: 56px;
+  display: inline-block;
+}
+.nav .nav-left .edi li{
+  line-height: 56px;
+}
+.nav .line{
+  height: 32px;
+  width: 1px;
+  background-color: #d1d1d1;
+  margin-top: 12px;
+float: left;
+  margin-bottom: 12px;
+}
+.nav .nav-right{
+  padding-left: 20px;
+  width: 100%;
+  padding-right: 20px;
+  font-size: 0;
+}
+.nav .nav-right ul li{
+  line-height: 56px;
+  margin-left: 29px;
+  font-size: 14px;
+  color: #767676;
+}
+.nav .nav-right ul li:nth-child(1){
+  margin-left: 21px!important;
+}
+/* 大图 */
+.Bigimg{
+  width: 100%;
+  height: 593px;
+  margin-bottom: 48px;
+  position: absolute;
+  top: 118px;
+}
+.Bigimg img{
+  width: 100%;
+  height: 593px;
+}
